# tailvest

./: .editorconfig  README.md  docker-compose.yml  logger.py  main.py  pyproject.toml  ruff.toml  schema.sql  server.py  yf.py  yf_fetch.py  yf_quotes.py
core/: instrument.py  quote.py
frontend/: biome.json  components.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: api-client.ts  app.tsx  main.tsx  routeTree.gen.ts
frontend/src/client/: sdk.gen.ts  types.gen.ts
frontend/src/components/option-chain/: expiry-options.tsx  expiry-tabs-list.tsx  option-chain-utils.tsx  option-chain.tsx
frontend/src/routes/tickers/$ticker/: index.tsx  options.tsx
frontend/src/routes/tickers/$ticker/expiries/$expiry/: index.tsx
